Fixed pic alignment

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -5,6 +5,7 @@
 	background-color: rgba(36,32,33,0.50);
 	padding: 1%;
 	color: white;
+	margin-bottom: 8px;
 }
 
 body{
@@ -13,6 +14,7 @@ body{
 	-moz-background-size: cover;
 	-o-background-size: cover;
 	background-size: cover;
+	font-style: italic;
 }
 
 .custom-h1 {
@@ -21,12 +23,13 @@ body{
 	font-weight: 100;
 	font-size: 50px;
 	line-height: 40px;
+	font-style: normal;
 }
 
 h2 {
 	color: #DBDBDB;
-	font-family: Helvetica Neue Light, Helvetica Neue, Helvetica, sans-serif;
-	font-style: italic;
+	font-family: 'Montserrat', Helvetica Neue Light, Helvetica Neue, Helvetica, sans-serif;
 	font-size: 30px;
 	line-height: 30px;
+	font-style: normal;
 }
